ホットキー設定ファイルを開くホットキーを追加

--- a/instanttextinserter/hotkey.ini
+++ b/instanttextinserter/hotkey.ini
@@ -1,5 +1,6 @@
 reload, cs, l
-open_snippet_folder, cs, o
+open_snippet_folder, cs, s
+open_hotkey_config, cs, h
 version, cs, v
 ;既に割り当てられたホットキー
 ;version, ca, r
