バージョン番号更新 0.0.7->0.1.0 and open対応分のドキュメントを更新

--- a/instanttextinserter/for_dist/hotkey.ini
+++ b/instanttextinserter/for_dist/hotkey.ini
@@ -1,14 +1,30 @@
+; ホットキー設定ファイル サンプル
+;
 ; セミコロンで始まる行はコメントです.
 ; 注釈を書いたり, 使わないホットキー設定を無効化したりするのに使えます.
 
-; ホットキー設定とスニペット設定を再読込する
+; ホットキー設定とスニペット設定を再読込する.
 reload, cs, l
 
-; スニペットファイルのあるフォルダを開く
+; スニペットファイルのあるフォルダを開く.
 open_snippet_folder, cs, s
 
-; 本ファイルを開く
+; 本ファイルを開く.
 open_hotkey_config, cs, h
 
-; バージョン情報を表示する
-;version, cs, v
+; 'open'を使うと指定ファイルを開くことができます.
+;
+; 書式
+; open, <修飾キー>, <文字キー>, <プログラムパス>, <引数>
+;
+; <引数> は省略可能です.
+;
+; 例1: メモ帳を開く
+open, cs, 1, notepad.exe
+; 例2: 本ファイルを開く(関連付けられたアプリケーションで開く)
+open, cs, 2, .\hotkey.ini
+; 例3: 本ファイルをメモ帳で開く.
+open, cs, 3, notepad.exe, .\hotkey.ini
+
+; バージョン情報を表示する.
+version, cs, v
